<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout11"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_grey"
    tools:context=".weaponsInformation">

    <Button
        android:id="@+id/backtodataview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_grey"
        android:text="Back"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.009"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weaponSelector">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/itemDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_corners"
                android:backgroundTint="@color/button_grey"
                android:padding="5dp"
                android:text="@string/colon_description"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/itemRarity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_corners"
                android:backgroundTint="@color/button_grey"
                android:padding="5dp"
                android:text="@string/colon_rarity"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/itemValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_corners"
                android:backgroundTint="@color/button_grey"
                android:padding="5dp"
                android:text="@string/colon_value"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/itemType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_corners"
                android:backgroundTint="@color/button_grey"
                android:padding="5dp"
                android:text="@string/colon_type"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/itemWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_corners"
                android:backgroundTint="@color/button_grey"
                android:padding="5dp"
                android:text="@string/colon_weight"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/itemTags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_corners"
                android:backgroundTint="@color/button_grey"
                android:padding="5dp"
                android:text="@string/colon_tag"
                android:textColor="@color/black" />

        </LinearLayout>
    </ScrollView>

    <Spinner
        android:id="@+id/weaponSelector"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="@color/button_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backtodataview" />

</androidx.constraintlayout.widget.ConstraintLayout>